--- a/README
+++ b/README
@@ -1,1 +1,4 @@
+ANALISE EXPLORATÓRIA DE DADOS EXTRAIDO DA COVIDSTRESS 
+PROJETO ACADEMICO REALIZADO DURANTE O ANO LETIVO DE 2021
+
 Para executar a análise exploratória basta abrir o arquivo .ipynb em uma IDLE que rode python.
